// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`Input.styles > Container SHOULD match snapshot > WHEN rendering with default properties 1`] = `
.c0 {
  align-items: center;
  color: #999e9c;
  display: flex;
  flex-shrink: 0;
  justify-content: center;
}

<div>
  <div
    class="c0"
  />
</div>
`;

exports[`Input.styles > InputWrapper SHOULD match snapshot > WHEN hasError condition is active 1`] = `
.c0 {
  align-items: center;
  background-color: rgba(17, 19, 18, 0.4);
  border: 1px solid #e04c36;
  border-radius: 6px;
  box-sizing: border-box;
  display: flex;
  flex-direction: row;
  height: 48px;
  padding: 0 16px;
  transition: border-color 0.2s;
  width: 100%;
}

.c0:focus-within {
  border-color: #e04c36;
}

<div>
  <div
    class="c0"
  />
</div>
`;

exports[`Input.styles > InputWrapper SHOULD match snapshot > WHEN invert property layout configuration is applied 1`] = `
.c0 {
  align-items: center;
  background-color: rgba(17, 19, 18, 0.4);
  border: 1px solid rgba(255, 255, 255, 0.1);
  border-radius: 6px;
  box-sizing: border-box;
  display: flex;
  flex-direction: row-reverse;
  height: 48px;
  padding: 0 16px;
  transition: border-color 0.2s;
  width: 100%;
}

.c0:focus-within {
  border-color: #ff8b22;
}

<div>
  <div
    class="c0"
  />
</div>
`;

exports[`Input.styles > InputWrapper SHOULD match snapshot > WHEN rendering standard component state properties 1`] = `
.c0 {
  align-items: center;
  background-color: rgba(17, 19, 18, 0.4);
  border: 1px solid rgba(255, 255, 255, 0.1);
  border-radius: 6px;
  box-sizing: border-box;
  display: flex;
  flex-direction: row;
  height: 48px;
  padding: 0 16px;
  transition: border-color 0.2s;
  width: 100%;
}

.c0:focus-within {
  border-color: #ff8b22;
}

<div>
  <div
    class="c0"
  />
</div>
`;

exports[`Input.styles > StyledInput SHOULD match snapshot > WHEN custom placeholder and typography properties are injected 1`] = `
.c0 {
  flex: 1;
  background: none;
  border: none;
  outline: none;
  height: 100%;
  width: 100%;
  margin: 0 16px;
  color: #079d56;
  font-family: Outfit-SemiBold;
  font-size: 16px;
  font-weight: 600;
  text-transform: none;
}

.c0::placeholder {
  color: #ff5aad;
  font-family: Outfit-Bold;
  font-weight: 800;
  text-transform: none;
}

.c0:-webkit-autofill,
.c0:-webkit-autofill:hover,
.c0:-webkit-autofill:focus,
.c0:-webkit-autofill:active {
  -webkit-box-shadow: 0 0 0px 1000px transparent inset!important;
  -webkit-text-fill-color: #079d56!important;
  box-shadow: 0 0 0px 1000px transparent inset!important;
  transition: background-color 9999s ease-in-out 0s;
}

<div>
  <input
    class="c0"
  />
</div>
`;

exports[`Input.styles > StyledInput SHOULD match snapshot > WHEN rendering standard native element override properties 1`] = `
.c0 {
  flex: 1;
  background: none;
  border: none;
  outline: none;
  height: 100%;
  width: 100%;
  margin: 0 16px;
  color: #f0f2f1;
  font-family: Outfit-Regular;
  font-size: 14px;
  font-weight: 400;
  text-transform: none;
}

.c0::placeholder {
  color: #5d615f;
  font-family: Outfit-Regular;
  font-weight: 400;
  text-transform: none;
}

.c0:-webkit-autofill,
.c0:-webkit-autofill:hover,
.c0:-webkit-autofill:focus,
.c0:-webkit-autofill:active {
  -webkit-box-shadow: 0 0 0px 1000px transparent inset!important;
  -webkit-text-fill-color: #f0f2f1!important;
  box-shadow: 0 0 0px 1000px transparent inset!important;
  transition: background-color 9999s ease-in-out 0s;
}

<div>
  <input
    class="c0"
  />
</div>
`;
